--- a/style/screen.css
+++ b/style/screen.css
@@ -14,9 +14,10 @@ html {
 	color: #eee;
 	height: 100%;
 	left: 0;
+	line-height: 1.15rem;
 	padding: 1rem;
 	position: absolute;
-	tab-size: 1rem;
+	tab-size: 2rem;
 	top: 0;
 	width: 50%;
 }
